# 1.0.7 : --/--/2020

* Receipt, certificate
* Tech updates
* Kalaweit data import

# 1.0.6 : 23/02/2020

* Movements
* Cause Sicknesses

# 1.0.5 : 09/02/2020

* CauseType & SiteType pattern for codes
* CauseGrowth
* Donation
* Imports for Kalaweit & LesEcoPattes

# 1.0.4 : 02/02/2020

* Sponsorship

# 1.0.3 : 01/02/2020

* FreeAsso_Alert

# 1.0.2 : 01/02/2020

* FreeSSO & FreeFW update
* Client (country & lang no more required)
* Cause, CauseMovement, CauseMedia, SiteMedia

# 1.0.1 : First test version

* Cause Type, Site Type, Variables, Cause, Site
* Simple design, Lists, basic search