@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <buildpath>
-	<buildpathentry external="true" kind="lib" path="/Users/jeromeklam/GitHub/freesso"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/http-factory"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/freefw"/>
 	<buildpathentry external="true" kind="lib" path="/Users/jeromeklam/GitHub/freefw"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/log"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/http-message"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/freesso"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/guzzle"/>
+	<buildpathentry external="true" kind="lib" path="/Users/jeromeklam/GitHub/freesso"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/php-jwt"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/http-server-middleware"/>
 	<buildpathentry external="true" kind="lib" path="/Users/jeromeklam/GitHub/freews"/>
 	<buildpathentry kind="con" path="org.eclipse.php.core.LANGUAGE"/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/psr7"/>
 	<buildpathentry kind="src" path=""/>
+	<buildpathentry combineaccessrules="false" kind="prj" path="/http-server-handler"/>
 </buildpath>
