@@ -10,9 +10,29 @@ class Cron
 {
 
     /**
+     * Vérification des files d'attente
+     *
+     * @param \FreeFW\Console\Input\AbstractInput $p_input
+     * @param \FreeFW\Console\Output\AbstractOutput $p_output
+     */
+    public function checkJobqueue(
+        \FreeFW\Console\Input\AbstractInput $p_input,
+        \FreeFW\Console\Output\AbstractOutput $p_output
+    ) {
+        $p_output->write("Gestion de la file d'attente", true);
+        $sso      = \FreeFW\DI\DI::getShared('sso');
+        $brokerId = $sso->getBrokerId();
+        $p_output->write("Broker : " . $brokerId, true);
+        $jobqueueService = \FreeFW\DI\DI::get('FreeFW::Service::Jobqueue');
+        $jobqueueService->handle();
+        $p_output->write("Fin de la gestion", true);
+    }
+
+    /**
      * Mise à jour des données des clients
      *
-     * @param \FreeFW\Console\Input\Input $p_input
+     * @param \FreeFW\Console\Input\AbstractInput $p_input
+     * @param \FreeFW\Console\Output\AbstractOutput $p_output
      */
     public function updateClient(
         \FreeFW\Console\Input\AbstractInput $p_input,
@@ -26,11 +46,12 @@ class Cron
         $clientService->updateLastDonations();
         $p_output->write("Fin de la mise à jour", true);
     }
-    
+
     /**
      * Mise à jour des données des causes
      *
-     * @param \FreeFW\Console\Input\Input $p_input
+     * @param \FreeFW\Console\Input\AbstractInput $p_input
+     * @param \FreeFW\Console\Output\AbstractOutput $p_output
      */
     public function updateCause(
         \FreeFW\Console\Input\AbstractInput $p_input,
