@@ -3,6 +3,7 @@
 * Receipt, certificate
 * Tech updates
 * Kalaweit data import
+* Spnsorship -> auto donation generation
 
 # 1.0.6 : 23/02/2020
 
